"Find in page" search button in the hamburger menu does not dismiss the menu, interferes with keyboard input
With Epiphany 45.2 on Fedora 39, on Wayland:
- Open the hamburger menu (or hit
F10
) - Click (or keyboard activate) the search magnifying glass
🔍 icon button in the center near the top. The searchbar appears, and the searchentry gets focused. - Without clicking anywhere, while the menu is still open, type something that contains the letter a, n, w, or any other letter that can interfere with the app's functions
Actual results: various unpredictable things happen, like the app's About dialog opening, or the "Create new web app" dialog, etc.
Expected results: close the menu before focusing the searchentry, so that it cannot interfere.
Edited by Jeff Fortin