Close page menu popover on print, search and fullscreen actions

Fixes: https://gitlab.gnome.org/GNOME/epiphany/-/issues/2283
Part-of: <https://gitlab.gnome.org/GNOME/epiphany/-/merge_requests/1438>